<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search_messages"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_more"
        android:title="More"
        android:icon="@drawable/ic_more_vert"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/action_settings"       android:title="@string/settings" />
            <item android:id="@+id/action_key_fingerprint" android:title="@string/key_fingerprint" />
            <item android:id="@+id/menu_quota"             android:title="@string/quota_summary" />
            <item android:id="@+id/menu_export"            android:title="@string/export_chat" />
            <item android:id="@+id/menu_wipe"              android:title="@string/wipe_data" />
        </menu>
    </item>
</menu>
